--- a/index.html
+++ b/index.html
@@ -5,109 +5,44 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta name="description" content="Monklift - A community platform for fitness freaks of all ages.">
   <title>Monklift - Fitness Community</title>
-  <style>
-    body {
-      font-family: Arial, sans-serif;
-      margin: 0;
-      padding: 0;
-      background-color: #f4f4f9;
-      color: #333;
-    }
-    header {
-      background-color: #1d3557;
-      color: #fff;
-      padding: 20px;
-      text-align: center;
-    }
-    header h1 {
-      margin: 0;
-      font-size: 36px;
-    }
-    .hero {
-      background-color: #457b9d;
-      color: white;
-      padding: 100px 20px;
-      text-align: center;
-    }
-    .hero h2 {
-      font-size: 28px;
-      margin-bottom: 20px;
-    }
-    .cta-button {
-      background-color: #e63946;
-      color: white;
-      padding: 15px 30px;
-      font-size: 18px;
-      text-decoration: none;
-      border-radius: 5px;
-      transition: background-color 0.3s ease;
-    }
-    .cta-button:hover {
-      background-color: #f1faee;
-      color: #1d3557;
-    }
-    section {
-      padding: 40px 20px;
-      text-align: center;
-    }
-    .features {
-      display: flex;
-      justify-content: space-around;
-      gap: 20px;
-    }
-    .feature-box {
-      background-color: #fff;
-      padding: 20px;
-      border-radius: 10px;
-      box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-      width: 30%;
-    }
-    .feature-box h3 {
-      color: #1d3557;
-    }
-    footer {
-      background-color: #1d3557;
-      color: white;
-      text-align: center;
-      padding: 20px;
-    }
-  </style>
+  <script src="https://cdn.tailwindcss.com"></script>
 </head>
-<body>
+<body class="bg-white text-gray-800">
 
-  <header>
-    <h1>Welcome to Monklift</h1>
-    <p>Your community of fitness enthusiasts, bringing together fitness freaks of all ages!</p>
+  <header class="bg-white text-gray-900 py-8 text-center shadow-md">
+    <h1 class="text-5xl font-extrabold">Welcome to Monklift</h1>
+    <p class="mt-4 text-lg">Your community of fitness enthusiasts, bringing together fitness freaks of all ages!</p>
   </header>
 
-  <section class="hero">
-    <h2>Join the Fitness Revolution</h2>
-    <p>Connect with people near you, share workouts, tips, and become part of a growing fitness community.</p>
-    <a href="#join" class="cta-button">Join Now</a>
+  <section class="hero bg-white text-gray-900 py-32 text-center border-b border-gray-200">
+    <h2 class="text-4xl font-bold mb-6">Join the Fitness Revolution</h2>
+    <p class="mb-8 text-lg">Connect with people near you, share workouts, tips, and become part of a growing fitness community.</p>
+    <p class="text-xl font-semibold text-gray-700">Stay Tuned for More Updates!</p>
   </section>
 
-  <section id="join">
-    <h2>Why Monklift?</h2>
-    <div class="features">
-      <div class="feature-box">
-        <h3>Fitness Community</h3>
-        <p>Connect with fitness enthusiasts from all walks of life. From beginners to experts, we cater to everyone.</p>
+  <section id="join" class="py-20 text-center">
+    <h2 class="text-4xl font-bold mb-12">Why Monklift?</h2>
+    <div class="features flex flex-wrap justify-center gap-10">
+      <div class="feature-box bg-white p-8 rounded-xl shadow-md w-full md:w-1/3 transform hover:scale-105 transition duration-300 border border-gray-200">
+        <h3 class="text-gray-900 text-2xl font-bold mb-4">Fitness Community</h3>
+        <p class="text-gray-600">Connect with fitness enthusiasts from all walks of life. From beginners to experts, we cater to everyone.</p>
       </div>
-      <div class="feature-box">
-        <h3>Local Events</h3>
-        <p>Attend fitness events and challenges near you. Strengthen your body and mind with like-minded individuals.</p>
+      <div class="feature-box bg-white p-8 rounded-xl shadow-md w-full md:w-1/3 transform hover:scale-105 transition duration-300 border border-gray-200">
+        <h3 class="text-gray-900 text-2xl font-bold mb-4">Local Events</h3>
+        <p class="text-gray-600">Attend fitness events and challenges near you. Strengthen your body and mind with like-minded individuals.</p>
       </div>
-      <div class="feature-box">
-        <h3>Track Your Progress</h3>
-        <p>Set goals, track your fitness journey, and share your success stories with your community.</p>
+      <div class="feature-box bg-white p-8 rounded-xl shadow-md w-full md:w-1/3 transform hover:scale-105 transition duration-300 border border-gray-200">
+        <h3 class="text-gray-900 text-2xl font-bold mb-4">Track Your Progress</h3>
+        <p class="text-gray-600">Set goals, track your fitness journey, and share your success stories with your community.</p>
       </div>
     </div>
   </section>
 
-  <footer>
-    <p>&copy; 2025 Monklift - All Rights Reserved</p>
-    <p>Follow us on social media for the latest updates!</p>
+  <footer class="bg-white text-gray-900 text-center py-8 border-t border-gray-200">
+    <p class="text-lg">&copy; 2025 Monklift - All Rights Reserved</p>
+    <p class="mt-2">Follow us on social media for the latest updates!</p>
   </footer>
 
 </body>
 </html>
+
