--- a/index.html
+++ b/index.html
@@ -6,41 +6,58 @@
   <meta name="description" content="Monklift - A community platform for fitness freaks of all ages.">
   <title>Monklift - Fitness Community</title>
   <script src="https://cdn.tailwindcss.com"></script>
+  <script>
+    tailwind.config = {
+      theme: {
+        extend: {
+          colors: {
+            primary: '#FF6B6B',
+            secondary: '#4ECDC4',
+            dark: '#2C3E50',
+            light: '#F7F9FC',
+          }
+        }
+      }
+    }
+  </script>
 </head>
-<body class="bg-white text-gray-800">
+<body class="bg-gradient-to-br from-light to-white text-dark">
 
-  <header class="bg-white text-gray-900 py-8 text-center shadow-md">
-    <h1 class="text-5xl font-extrabold">Welcome to Monklift</h1>
-    <p class="mt-4 text-lg">Your community of fitness enthusiasts, bringing together fitness freaks of all ages!</p>
+  <header class="bg-gradient-to-r from-primary to-secondary text-white py-12 text-center shadow-lg">
+    <h1 class="text-6xl font-extrabold">Welcome to Monklift</h1>
+    <p class="mt-4 text-xl opacity-90">Your community of fitness enthusiasts, bringing together fitness freaks of all ages!</p>
   </header>
 
-  <section class="hero bg-white text-gray-900 py-32 text-center border-b border-gray-200">
-    <h2 class="text-4xl font-bold mb-6">Join the Fitness Revolution</h2>
-    <p class="mb-8 text-lg">Connect with people near you, share workouts, tips, and become part of a growing fitness community.</p>
-    <p class="text-xl font-semibold text-gray-700">Stay Tuned for More Updates!</p>
+  <section class="hero bg-light py-32 text-center border-b border-gray-200">
+    <h2 class="text-5xl font-bold mb-6 text-dark">Join the Fitness Revolution</h2>
+    <p class="mb-8 text-xl text-gray-700 max-w-3xl mx-auto">Connect with people near you, share workouts, tips, and become part of a growing fitness community.</p>
+    <p class="text-2xl font-semibold text-primary">Stay Tuned for More Updates!</p>
   </section>
 
-  <section id="join" class="py-20 text-center">
-    <h2 class="text-4xl font-bold mb-12">Why Monklift?</h2>
-    <div class="features flex flex-wrap justify-center gap-10">
-      <div class="feature-box bg-white p-8 rounded-xl shadow-md w-full md:w-1/3 transform hover:scale-105 transition duration-300 border border-gray-200">
-        <h3 class="text-gray-900 text-2xl font-bold mb-4">Fitness Community</h3>
-        <p class="text-gray-600">Connect with fitness enthusiasts from all walks of life. From beginners to experts, we cater to everyone.</p>
+  <section id="join" class="py-20 text-center bg-white">
+    <h2 class="text-4xl font-bold mb-12 text-dark">Why Monklift?</h2>
+    <div class="features flex flex-wrap justify-center gap-10 px-4">
+      <div class="feature-box bg-light p-8 rounded-2xl shadow-lg w-full md:w-1/3 transform hover:scale-105 transition duration-300 hover:shadow-xl border-2 border-secondary/20">
+        <div class="text-secondary text-4xl mb-4">🏃‍♂️</div>
+        <h3 class="text-dark text-2xl font-bold mb-4">Fitness Community</h3>
+        <p class="text-gray-700">Connect with fitness enthusiasts from all walks of life. From beginners to experts, we cater to everyone.</p>
       </div>
-      <div class="feature-box bg-white p-8 rounded-xl shadow-md w-full md:w-1/3 transform hover:scale-105 transition duration-300 border border-gray-200">
-        <h3 class="text-gray-900 text-2xl font-bold mb-4">Local Events</h3>
-        <p class="text-gray-600">Attend fitness events and challenges near you. Strengthen your body and mind with like-minded individuals.</p>
+      <div class="feature-box bg-light p-8 rounded-2xl shadow-lg w-full md:w-1/3 transform hover:scale-105 transition duration-300 hover:shadow-xl border-2 border-primary/20">
+        <div class="text-primary text-4xl mb-4">🎯</div>
+        <h3 class="text-dark text-2xl font-bold mb-4">Local Events</h3>
+        <p class="text-gray-700">Attend fitness events and challenges near you. Strengthen your body and mind with like-minded individuals.</p>
       </div>
-      <div class="feature-box bg-white p-8 rounded-xl shadow-md w-full md:w-1/3 transform hover:scale-105 transition duration-300 border border-gray-200">
-        <h3 class="text-gray-900 text-2xl font-bold mb-4">Track Your Progress</h3>
-        <p class="text-gray-600">Set goals, track your fitness journey, and share your success stories with your community.</p>
+      <div class="feature-box bg-light p-8 rounded-2xl shadow-lg w-full md:w-1/3 transform hover:scale-105 transition duration-300 hover:shadow-xl border-2 border-secondary/20">
+        <div class="text-secondary text-4xl mb-4">📈</div>
+        <h3 class="text-dark text-2xl font-bold mb-4">Track Your Progress</h3>
+        <p class="text-gray-700">Set goals, track your fitness journey, and share your success stories with your community.</p>
       </div>
     </div>
   </section>
 
-  <footer class="bg-white text-gray-900 text-center py-8 border-t border-gray-200">
-    <p class="text-lg">&copy; 2025 Monklift - All Rights Reserved</p>
-    <p class="mt-2">Follow us on social media for the latest updates!</p>
+  <footer class="bg-dark text-white text-center py-12">
+    <p class="text-xl">&copy; 2025 Monklift - All Rights Reserved</p>
+    <p class="mt-4 text-secondary">Follow us on social media for the latest updates!</p>
   </footer>
 
 </body>
